[gd_scene load_steps=5 format=2]

[ext_resource path="res://Levels/Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Static/Resources/Fonts/Resources/Medium_Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Levels/Scenes/MobileControls.gd" type="Script" id=3]
[ext_resource path="res://Static/Resources/UIElements/Images/Ready_Unchecked.png" type="Texture" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Interface" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="QuitButton" type="Button" parent="CanvasLayer/Interface"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -56.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MobileControls" type="HBoxContainer" parent="CanvasLayer/Interface"]
visible = false
anchor_left = 0.00147476
anchor_top = 0.729323
anchor_right = 1.00147
anchor_bottom = 0.997378
alignment = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Movement" type="Control" parent="CanvasLayer/Interface/MobileControls"]
margin_right = 638.0
margin_bottom = 193.0
size_flags_horizontal = 3

[node name="Left" type="TextureButton" parent="CanvasLayer/Interface/MobileControls/Movement"]
margin_left = 40.4913
margin_top = 4.27301
margin_right = 120.491
margin_bottom = 84.273
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="TextureButton" parent="CanvasLayer/Interface/MobileControls/Movement"]
margin_left = 118.979
margin_top = -73.0255
margin_right = 198.979
margin_bottom = 6.97455
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="TextureButton" parent="CanvasLayer/Interface/MobileControls/Movement"]
margin_left = 118.979
margin_top = 80.3823
margin_right = 198.979
margin_bottom = 160.382
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureButton" parent="CanvasLayer/Interface/MobileControls/Movement"]
margin_left = 197.467
margin_top = 3.0838
margin_right = 277.467
margin_bottom = 83.0838
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actions" type="Control" parent="CanvasLayer/Interface/MobileControls"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 193.0
size_flags_horizontal = 3

[node name="SpecialB" type="TextureButton" parent="CanvasLayer/Interface/MobileControls/Actions"]
margin_left = 366.56
margin_top = -1.07239
margin_right = 446.56
margin_bottom = 78.9276
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpecialA" type="TextureButton" parent="CanvasLayer/Interface/MobileControls/Actions"]
margin_left = 445.048
margin_top = -78.3708
margin_right = 525.048
margin_bottom = 1.62915
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump" type="TextureButton" parent="CanvasLayer/Interface/MobileControls/Actions"]
margin_left = 445.048
margin_top = 75.0369
margin_right = 525.048
margin_bottom = 155.037
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="TextureButton" parent="CanvasLayer/Interface/MobileControls/Actions"]
margin_left = 523.536
margin_top = -2.2616
margin_right = 603.536
margin_bottom = 77.7384
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Interface/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Interface/MobileControls/Movement/Left" to="CanvasLayer/Interface/MobileControls" method="_on_Left_pressed"]
[connection signal="pressed" from="CanvasLayer/Interface/MobileControls/Movement/Up" to="CanvasLayer/Interface/MobileControls" method="_on_Up_pressed"]
[connection signal="pressed" from="CanvasLayer/Interface/MobileControls/Movement/Down" to="CanvasLayer/Interface/MobileControls" method="_on_Down_pressed"]
[connection signal="pressed" from="CanvasLayer/Interface/MobileControls/Movement/Right" to="CanvasLayer/Interface/MobileControls" method="_on_Right_pressed"]
[connection signal="pressed" from="CanvasLayer/Interface/MobileControls/Actions/SpecialB" to="CanvasLayer/Interface/MobileControls" method="_on_SpecialB_pressed"]
[connection signal="pressed" from="CanvasLayer/Interface/MobileControls/Actions/SpecialA" to="CanvasLayer/Interface/MobileControls" method="_on_SpecialA_pressed"]
[connection signal="pressed" from="CanvasLayer/Interface/MobileControls/Actions/Jump" to="." method="_on_Jump_pressed"]
[connection signal="pressed" from="CanvasLayer/Interface/MobileControls/Actions/Attack" to="." method="_on_Attack_pressed"]
