extends HBoxContainer

func _on_Left_pressed():
	pass # Replace with function body.


func _on_Up_pressed():
	pass # Replace with function body.


func _on_Down_pressed():
	pass # Replace with function body.


func _on_Right_pressed():
	pass # Replace with function body.


func _on_SpecialB_pressed():
	pass # Replace with function body.


func _on_SpecialA_pressed():
	pass # Replace with function body.
